--- a/app/elements/loading-placeholder/loading-placeholder.html
+++ b/app/elements/loading-placeholder/loading-placeholder.html
@@ -23,10 +23,10 @@ Usage:
     }
   </style>
   <template attributes="data">
-    <paper-card hidden={{!loadingStatus}} heading="Daten werden geladen... Bitte warten.">
+    <paper-card hidden={{!loadingStatus}} heading="Daten werden geladen... ">
       <div class="card-content">
-        <!-- <paper-progress indeterminate></paper-progress> -->
-        <paper-spinner active></paper-spinner>
+        <paper-progress indeterminate></paper-progress>
+        <!-- <paper-spinner active></paper-spinner> -->
       </div>
     </paper-card>
   </template>
