--- a/app/elements/profile-docent/profile-docent.html
+++ b/app/elements/profile-docent/profile-docent.html
@@ -51,12 +51,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <paper-material elevation="1">
       <paper-header-panel>
         <paper-toolbar>
-          <div>
-            <h2>Mein Profil</h2>
-          </div>
-          <div class="card-actions">
-            <paper-button flat on-click="editButton">Anpassen</paper-button>
-          </div>
+          <h2>Mein Profil</h2>
+          <span class="flex"></span>
+          <paper-button flat on-click="editButton">Ändern</paper-button>
         </paper-toolbar>
 
       </paper-header-panel>
