--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -21,6 +21,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'd-home';
     });
 
+    page('/ahome', function() {
+      app.route = 'a-home';
+    });
+
     page('/uappc', function() {
       app.route = 'u-create-appointment';
     });
