--- a/app/admin.html
+++ b/app/admin.html
@@ -79,7 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
             <template is="dom-if" if="{{isAdmin(currentUser)}}" href="/alogin">
-              <a data-route="a-home" href="/">
+              <a data-route="a-home" href="/ahome">
                 <iron-icon icon="home"></iron-icon>
                 <span>Start</span>
               </a>
@@ -179,6 +179,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                 </paper-material>
               </template>
+            </section>
+
+
+            <section data-route="a-home">
+        <homescreen-element></homescreen-element>
             </section>
 
             <section data-route="a-overview-docent">
