--- a/app/elements/profile-user/profile-user.html
+++ b/app/elements/profile-user/profile-user.html
@@ -43,7 +43,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       bottom: 40px;
     }
 
-
     #roomElement {
       cursor: pointer;
     }
@@ -51,13 +50,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <paper-material elevation="1">
       <paper-header-panel>
-        <paper-toolbar>
-          <div>
-            <h2>Mein Profil</h2>
-          </div>
-          <div class="card-actions">
-            <paper-button flat on-click="editButton">Ändern</paper-button>
-          </div>
+        <paper-toolbar justify>
+
+          <h2>Mein Profil</h2>
+          <span class="flex"></span>
+          <paper-button flat on-click="editButton">Ändern</paper-button>
+
         </paper-toolbar>
 
       </paper-header-panel>
@@ -236,7 +234,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         ready: function() {
           var currentUser = Parse.User.current();
-            currentUser.fetch();
+          currentUser.fetch();
           this.Email = currentUser.get("email");
           this.firstName = currentUser.get("firstName");
           this.lastName = currentUser.get("lastName");
@@ -269,13 +267,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           });
 
-            this.$.toast.toggle();
+          this.$.toast.toggle();
 
 
-            var currentUser = Parse.User.current();
-            currentUser.set("firstName",firstName);
-            currentUser.set("lastName", lastName);
-            currentUser.save();
+          var currentUser = Parse.User.current();
+          currentUser.set("firstName", firstName);
+          currentUser.set("lastName", lastName);
+          currentUser.save();
 
         }
 
